tests/ui/const-generics/ice-68875.stderr
error: generic `Self` types are currently not permitted in anonymous constants
  --> $DIR/ice-68875.rs:4:20
   |
LL |     data: &'a [u8; Self::SIZE],
   |                    ^^^^
   |
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions
   = help: alternatively, you can use `#![feature(generic_const_args)]` and extract the expression into a `type const` item

error: aborting due to 1 previous error

